# django-hospitals-api

hospitals-src/: Dockerfile.dev  Makefile  docker-compose.yml  manage.py  pyproject.toml
hospitals-src/boundaries/: admin.py  load.py  models.py  urls.py  views.py
hospitals-src/boundaries/migrations/: 0001_initial.py
hospitals-src/hospitals/: admin.py  filters.py  load.py  models.py  urls.py  views.py
hospitals-src/hospitals/migrations/: 0001_initial.py
hospitals-src/hostpitals_api/: asgi.py  settings.py  urls.py  wsgi.py
hospitals-src/nginx/: default.conf
